--- a/style.css
+++ b/style.css
@@ -133,9 +133,16 @@ nav{
     color: white;
     width: 100%;
 }
+video{
+    height:100vh;
+    
+    
+    
+}
 .video{
-    height:90vh;
-    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .content{
     display: flex;
